--- a/docker/docker-compose_Airflow.yml
+++ b/docker/docker-compose_Airflow.yml
@@ -13,7 +13,7 @@ services:
     volumes:
       - ../airflow_/dags:/usr/local/airflow/dags
       - ../scripts:/usr/local/airflow/includes
-      - ../dbt_:/usr/local/airflow/dbt_
+      - ../traffic_dbt:/usr/local/airflow/traffic_dbt
       - ../data:/usr/local/airflow/data
       - ../airflow_/logs:/opt/airflow/logs
       - ../airflow_/plugins:/opt/airflow/plugins
